scss/_component.button.scss
$button-height: $space-l;

.button {
  display: inline-block;
  padding: 0 $space-m;
  font-family: $font-family-alt;
  // font-size: modular-scale(-1);
  font-weight: $font-weight-bold;
  line-height: $button-height;
  color: color('brand');
  text-align: center;
  text-shadow: none;
  white-space: nowrap;
  vertical-align: middle;
  background-color: color('highlight');
  border: 0;
  box-shadow: none;

  &:hover,
  &:focus,
  &:active {
    text-shadow: none;
    background-color: color('dark');
    box-shadow: none;
  }
}

.button--primary {
  color: color('highlight');
  background-color: color('brand');

  &:hover,
  &:focus,
  &:active {
    color: color('highlight');
    background-color: color('dark');
  }
}

.button--small {
  padding: ($space-m / 3 - (2 / $root-font-size-px)) ($space-s) ($space-m / 3);
}

.button--inline {
  vertical-align: baseline;
}

